Blog page complete. Portfolio landing page complete.

--- a/views/about.haml
+++ b/views/about.haml
@@ -75,6 +75,67 @@
       %span skills
       .clear
       .category-container
+        .skill-list
+          %ul
+            %li expert
+            %li advanced
+            %li intermediate
+            %li beginner
+        %figure
+          %table.frontend{:cellspacing => "0", :cellpadding => "0"}
+            %tr
+              %td{:data => 'hover'}
+                .expert.alt{:data => 'hover'}
+                CSS
+              %td
+                .expert
+                HAML
+              %td
+                .expert.alt
+                HTML
+              %td 
+                .beginner
+                Javascript
+              %td 
+                .advanced.alt
+                JQuery  
+              %td 
+                .expert
+                SASS  
+          %table.programming{:cellspacing => "0", :cellpadding => "0"}
+            %tr
+              %td 
+                .intermediate.alt
+                Java
+              %td 
+                .beginner
+                PHP/MySQL
+              %td
+                .beginner.alt
+                Python
+              %td 
+                .beginner
+                Ruby on Rails
+              
+          %table.design{:cellspacing => "0", :cellpadding => "0"}
+            %tr
+              %td 
+                .intermediate.alt
+                Illustrator
+              %td 
+                .expert
+                Photoshop
+              %td 
+                .expert.alt
+                Print/Web Design
+          %table.additional{:cellspacing => "0", :cellpadding => "0"}
+            %tr
+              %td 
+                .expert
+                Detail Oriented
+              %td 
+                .expert.alt
+                Fluent Spanish
     .category
       %span experience
       .clear
