--- a/views/index.haml
+++ b/views/index.haml
@@ -14,61 +14,48 @@
   .web
     .web-logo 
       %img(src="/images/portfolio/web/web_logo.png" alt="web")/
-    .small-thumb
-      %a(href="#")
-        %img(src="/images/portfolio/web/ana_ian.png" alt="ana and ian")/
-  
-    .small-thumb
-      %a(href="#")
-        %img(src="/images/portfolio/web/scully.png" alt="scully and scully")/
-  
-    .small-thumb
-      %a(href="#")
-        %img(src="/images/portfolio/web/mally.png" alt="mally beauty")/
-  
-    .small-thumb
-      %a(href="#")
-        %img(src="/images/portfolio/web/kayandy.png" alt="kayleigh and andy")/   
-  
-    .small-thumb
-      %a(href="#")
-        %img(src="/images/portfolio/web/kicokids.png" alt="kico kids")/
-  
-    .small-thumb
-      %a(href="#")
-        %img(src="/images/portfolio/web/ajaline.png" alt="ajaline")/
-  
-    .small-thumb
-      %a(href="#")
-        %img(src="/images/portfolio/web/satellite_records.png" alt="satellite records")/
-  
-    .small-thumb
-      %a(href="#")
-        %img(src="/images/portfolio/web/kenneth_cole.png" alt="kenneth cole")/
-  
-    .small-thumb
-      %a(href="#")
-        %img(src="/images/portfolio/web/bobbi_brown.png" alt="bobbi brown")/
-  
-    .small-thumb
-      %a(href="#")
-        %img(src="/images/portfolio/web/yigalazrouel.png" alt="yigal azrouel")/
-  
-    .small-thumb
-      %a(href="#")
-        %img(src="/images/portfolio/web/scully.png" alt="scully and scully")/
-  
-    .small-thumb
-      %a(href="#")
-        %img(src="/images/portfolio/web/boast.png" alt="boast")/
     
     .small-thumb
-      %a(href="#")
-        %img(src="/images/portfolio/web/lanecrawford.png" alt="lane crawford")/
+      %img(src="/images/portfolio/web/ana_ian.png" alt="ana and ian")/
   
     .small-thumb
-      %a(href="#")
-        %img(src="/images/portfolio/web/lanecrawford_teaser.png" alt="lane crawford teaser")/
+      %img(src="/images/portfolio/web/scully.png" alt="scully and scully")/
+  
+    .small-thumb
+      %img(src="/images/portfolio/web/mally.png" alt="mally beauty")/
+  
+    .small-thumb
+      %img(src="/images/portfolio/web/kayandy.png" alt="kayleigh and andy")/   
+  
+    .small-thumb
+      %img(src="/images/portfolio/web/kicokids.png" alt="kico kids")/
+  
+    .small-thumb
+      %img(src="/images/portfolio/web/ajaline.png" alt="ajaline")/
+  
+    .small-thumb
+      %img(src="/images/portfolio/web/satellite_records.png" alt="satellite records")/
+  
+    .small-thumb
+      %img(src="/images/portfolio/web/kenneth_cole.png" alt="kenneth cole")/
+  
+    .small-thumb
+      %img(src="/images/portfolio/web/bobbi_brown.png" alt="bobbi brown")/
+  
+    .small-thumb
+      %img(src="/images/portfolio/web/yigalazrouel.png" alt="yigal azrouel")/
+  
+    .small-thumb
+      %img(src="/images/portfolio/web/scully.png" alt="scully and scully")/
+  
+    .small-thumb
+      %img(src="/images/portfolio/web/boast.png" alt="boast")/
+    
+    .small-thumb
+      %img(src="/images/portfolio/web/lanecrawford.png" alt="lane crawford")/
+  
+    .small-thumb
+      %img(src="/images/portfolio/web/lanecrawford_teaser.png" alt="lane crawford teaser")/
     
     .small-thumb
       %a(href="#")
@@ -137,22 +124,39 @@
   .print
     .print-logo 
       %img(src="/images/portfolio/print/print_logo.png" alt="print")/
+    
+    .small-thumb
+      %img(src="/images/portfolio/print/bg1.jpg" alt="black and white")/
       
-    %img(src="/images/portfolio/print/bg1.jpg" alt="black and white")/
-    %img(src="/images/portfolio/print/bg2.jpg" alt="black and white")/
-    %img(src="/images/portfolio/print/bg3.jpg" alt="black and white")/
     .group-float
-      %img(src="/images/portfolio/print/color1.jpg" alt="color")/
-      %img(src="/images/portfolio/print/color2.jpg" alt="color")/
-    %img(src="/images/portfolio/print/color3.jpg" alt="color")/
+      .small-thumb
+        %img(src="/images/portfolio/print/bg2.jpg" alt="black and white")/
+      .small-thumb
+        %img(src="/images/portfolio/print/bg3.jpg" alt="black and white")/
+        
+    .group-float
+      .small-thumb
+        %img(src="/images/portfolio/print/color1.jpg" alt="color")/
+      .small-thumb
+        %img(src="/images/portfolio/print/color2.jpg" alt="color")/
+    
+    .small-thumb
+      %img(src="/images/portfolio/print/color3.jpg" alt="color")/
     
   .woodwork
     .woodwork-logo 
       %img(src="/images/portfolio/woodwork/woodwork_logo.png" alt="woodwork")/
-      
-    %img(src="/images/portfolio/woodwork/wood1.jpg" alt="wood")/
-    %img(src="/images/portfolio/woodwork/wood2.jpg" alt="wood")/
-    %img(src="/images/portfolio/woodwork/wood3.jpg" alt="wood")/
-    %img(src="/images/portfolio/woodwork/wood4.jpg" alt="wood")/
+    
+    .small-thumb.one
+      %img(src="/images/portfolio/woodwork/wood1.jpg" alt="wood")/
+    
+    .small-thumb.two
+      %img(src="/images/portfolio/woodwork/wood2.jpg" alt="wood")/
+    
+    .small-thumb.three
+      %img(src="/images/portfolio/woodwork/wood3.jpg" alt="wood")/
+  
+    .small-thumb.four
+      %img(src="/images/portfolio/woodwork/wood4.jpg" alt="wood")/
   
 .clear
