--- a/views/stylesheets/app.scss
+++ b/views/stylesheets/app.scss
@@ -16,12 +16,47 @@ $neon-green: #dcf74a;
 	&:hover { background-position: 0px -58px; }
 }
 
+@mixin graph($x-coordinate) {
+	height: 98px;
+	width: 8px; 
+	margin: 0 auto;
+  cursor: pointer;
+	border: 0px;
+	text-align: center;
+	position: relative;
+	background: url('/images/about/graph_sprite.png') $x-coordinate 0px no-repeat;
+	&:hover { background-position: $x-coordinate - 9px 0px; font-weight: bold; }
+	&.alt {
+	  padding: 0 0 17px 0;
+	  div {  position: absolute; bottom: 0px; left: 3px }
+	}
+}
+
+@mixin thumb-container($width, $height) {
+  float: left;
+  position: relative;
+  width: $width;
+  height: $height;
+  margin: 1px 1px 0 0;
+  img { float: left; height: $height; width: $width }
+  .grey-overlay {
+    display: none;
+    z-index: 20;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: $width;
+    height: $height;
+  }  
+}
+
 @mixin frame($color) {
   border: 8px solid ($color);
   position: relative;
   margin-bottom: 8px;
   float: left;
-  padding: 0 0 0 1px;
+  padding: 0 0 1px 1px;
+  width: 1023px;
 }
 
 @mixin label($x-coordinate) {
@@ -32,6 +67,18 @@ $neon-green: #dcf74a;
   width: 69px;
   height: 67px
 }
+
+@font-face {
+  font-family: Rockwell;
+  src: url('/fonts/Rockwell.ttf'),
+       url('/fonts/Rockwell.eot'); /* IE9+ */
+  font-family: BotonBQ;
+  src: url('/fonts/BotonBQ.ttf'),
+      url('/fonts/BotonBQ.ttf'); /* IE9+ */
+}
+
+::selection { background-color:#b4fef1; }
+::-moz-selection { background-color:#b4fef1; }
 
 /***********************anaenders***********************/
 body {
@@ -45,7 +92,6 @@ body {
 }
 
 .generic { float: left; width: 100% }
-.group-float { float: left; width: 542px }
 
 a {
   font-weight: bold;
@@ -56,7 +102,12 @@ a {
   }
 }
 
-p { padding-bottom: 10px; line-height: 1.4em; margin: 0px }
+p { 
+  padding-bottom: 10px; 
+  line-height: 1.4em; 
+  margin: 0px;
+  word-wrap: break-word;
+}
 
 .clear {
   clear: both;
@@ -110,40 +161,26 @@ p { padding-bottom: 10px; line-height: 1.4em; margin: 0px }
   z-index: 50;
   .web {
     @include frame($almost-black);
-    .web-logo { @include label(991px) }
-    .small-thumb {
-      float: left;
-      position: relative;
-      width: 340px;
-      height: 100px;
-      margin: 1px 1px 0 0;
-      img { 
-        float: left;
-        width: 340px;
-        height: 100px 
-      }
-      .grey-overlay {
-        display: none;
-        z-index: 20;
-        position: absolute;
-        top: 0px;
-        left: 0px;
-        width: 340px;
-        height: 100px
-      }
-    }
+    .web-logo { @include label(1001px) }
+    .small-thumb { @include thumb-container(340px, 100px); }
   }
   .print {
     @include frame($neon-pink);
-    padding-bottom: 1px;
-    .print-logo { @include label(-35px) }
-    img { float: left; margin: 1px 1px 0 0 }
+    .print-logo { @include label(-45px) }
+    .small-thumb { @include thumb-container(480px, 341px); }
+    .group-float { 
+      .small-thumb { @include thumb-container(541px, 170px); }
+      float: left; 
+      width: 542px;
+    }
   }
   .woodwork {
     @include frame($neon-green);
-    padding-bottom: 1px;
-    .woodwork-logo { @include label(991px) }
-    img { float: left; margin: 1px 1px 0 0 }
+    .woodwork-logo { @include label(1001px) }
+    .small-thumb.one { @include thumb-container(235px, 160px); }
+    .small-thumb.two { @include thumb-container(224px, 160px); }
+    .small-thumb.three { @include thumb-container(216px, 160px); }
+    .small-thumb.four { @include thumb-container(344px, 160px); }
   }
 }
 
@@ -157,12 +194,18 @@ p { padding-bottom: 10px; line-height: 1.4em; margin: 0px }
     img { float: left }
   }
   .casual-intro {
-    width: 525px;
+    width: 475px;
+    font-size: 13px;
     float: left;
-    margin: 0 15px 10px 0
+    margin: 0 15px 10px 0;
+    p:first-child {
+      &:first-letter {
+        font-size: 20px;
+      }
+    }
   }
   .twitter-feed {
-    width: 500px;
+    width: 550px;
     height: 252px;
     float: left;  
     overflow-y: scroll;
@@ -170,10 +213,12 @@ p { padding-bottom: 10px; line-height: 1.4em; margin: 0px }
       margin: 0px;
       padding: 15px 0 15px 40px;
       border-bottom: 1px solid $grey;
+      font-family: Georgia;
+      font-size: 11px;
       background: url('/images/about/twitter_bird.png') no-repeat 0% 50%;
       font-weight: bold;
       span { 
-        font-size: 11px; 
+        font-size: 10px; 
         font-weight: normal; 
         display: block;
         margin-top: 10px;
@@ -199,7 +244,7 @@ p { padding-bottom: 10px; line-height: 1.4em; margin: 0px }
     width: 135px;
     height: 27px;
     background: url('/images/about/btns/dload_resume.jpg') repeat 0px 0px;
-    &:hover { background: url('/images/about/btns/dload_resume.jpg') repeat 0px 27px; }
+    &:hover { background: url('/images/about/btns/dload_resume.jpg') repeat 0px 27px; font-weight: bold }
   }
   h1 {
     background-color: #fff;
@@ -209,6 +254,8 @@ p { padding-bottom: 10px; line-height: 1.4em; margin: 0px }
     line-height: 1.3em;
     font-size: 24px;
     text-align: center;
+    font-weight: normal;
+    font-family: BotonBQ, Rockwell, Georgia, Serif;
   }
   description {
     text-align: justify;
@@ -233,10 +280,60 @@ p { padding-bottom: 10px; line-height: 1.4em; margin: 0px }
       padding: 5px 10px;
       font-size: 11px
     }
+    .skill-list {
+      width: 100px;
+      float: left;
+      ul {
+        @extend .generic; 
+        padding: 0px;
+        margin: 23px 0 0 0;
+        li {
+          list-style-type: none;
+          height: 17px;
+          margin: 0 10px 0 0;
+          padding-right: 6px;
+          font-style: italic;
+          font-family: Georgia;
+          font-weight: bold;
+          font-size: 11px;
+          background: url('/images/about/dash.jpg') no-repeat 100% 50%;
+        }
+      }
+    }
+    figure {
+      width: 940px;
+      height: 170px;
+      float: left;
+      background: url('/images/about/chartBG.jpg') no-repeat 0px 98px;
+      margin: 0px;
+      table {
+        font-family: Georgia;
+        height: 150px;
+        float: left;
+        margin-top: 25px;
+        padding-right: 15px;
+        &.frontend { width: 315px; td { width: 16% } }
+        &.programming { width: 270px; td { width: 25% }}
+        &.design { width: 193px; td { width: 33% } }
+        &.additional { width: 162px; td { width: 50% } }
+        td {
+          padding: 0px;
+          font-style: italic;
+          font-size: 11px;
+          text-align: center;
+          width: auto;
+        }
+        .beginner { @include graph(-75px) }
+        .intermediate { @include graph(-50px) }
+        .advanced { @include graph(-25px) }
+        .expert { @include graph(0px) }
+      }
+    }
     table {
       @extend .generic;  
       font-family: Georgia;
       margin-top: 22px;
+      th { font-family: Georgia, Rockwell, Serif; }
       th, td { 
         line-height: 1.3em; 
         text-align: left; 
@@ -293,6 +390,7 @@ p { padding-bottom: 10px; line-height: 1.4em; margin: 0px }
     }
     h4 { 
       text-transform: capitalize;
+      font-family: BotonBQ, Rockwell, Georgia, Serif;
       // font-variant: small-caps;
       margin: 0px;
       padding: 0px;
@@ -301,17 +399,29 @@ p { padding-bottom: 10px; line-height: 1.4em; margin: 0px }
       padding: 15px 0; 
       font-weight: normal; 
     }
-    .fb-comment-wrapper {
-      width: 100%;
-      margin: 25px 25px 0 25px;
+    .blog_content { 
+      float: left; 
+      width: 496px; 
+      margin-right: 10px; 
+      -moz-column-count:2; /* Firefox */
+      -webkit-column-count:2; /* Safari and Chrome */
+      column-count:2; 
+      -moz-column-gap:10px; /* Firefox */
+      -webkit-column-gap:10px; /* Safari and Chrome */
+      column-gap:10px;
     }
-    p { line-height: 1.5em; padding-bottom: 12px; }
-    a { font-weight: normal; color: $dark-grey; float: right; clear: both }
-    img { float: right; margin: 0 0 5px 10px; }
+    .fb-comment-wrapper {
+      width: 506px;
+      float: left;
+      margin: 10px 0 0 0px;
+    }
+    p { line-height: 1.5em; padding-bottom: 12px; font-size: 13px }
+    a { font-weight: normal; color: $dark-grey; font-style: italic }
+    img { float: right; margin: 0 0 10px 0;  }
   }
   .pagination {
     @extend .generic; 
-    margin: 20px 0 50px 0;
+    margin: 0 0 20px 0;
     .prev { width: 50%; float: left; text-align: left }
     .next { width: 50%; float: right; text-align: right }
   }
@@ -330,7 +440,7 @@ p { padding-bottom: 10px; line-height: 1.4em; margin: 0px }
       background: url('/images/blog/bullet.jpg') no-repeat 0px 0px;
       margin: 0 10px 15px 10px;
       text-align: center;
-      float: left;
+      float: right;
       a { font-weight: normal }
       span { 
         color: #6e6e6e; 
