site stuffing for portfolio pages partially completed

--- a/views/about.haml
+++ b/views/about.haml
@@ -84,58 +84,58 @@
         %figure
           %table.frontend{:cellspacing => "0", :cellpadding => "0"}
             %tr
-              %td{:data => 'hover'}
-                .expert.alt{:data => 'hover'}
-                CSS
-              %td
-                .expert
-                HAML
               %td
                 .expert.alt
-                HTML
-              %td 
+                %label CSS
+              %td
+                .expert
+                %label HAML
+              %td
+                .expert.alt
+                %label HTML
+              %td
                 .beginner
-                Javascript
+                %label Javascript
               %td 
                 .advanced.alt
-                JQuery  
+                %label JQuery & JQuery-UI
               %td 
                 .expert
-                SASS  
+                %label SASS  
           %table.programming{:cellspacing => "0", :cellpadding => "0"}
             %tr
               %td 
                 .intermediate.alt
-                Java
+                %label Java
               %td 
                 .beginner
-                PHP/MySQL
+                %label PHP/MySQL
               %td
                 .beginner.alt
-                Python
+                %label Python
               %td 
                 .beginner
-                Ruby on Rails
+                %label Ruby on Rails
               
           %table.design{:cellspacing => "0", :cellpadding => "0"}
             %tr
               %td 
                 .intermediate.alt
-                Illustrator
+                %label Illustrator
               %td 
                 .expert
-                Photoshop
+                %label Photoshop
               %td 
                 .expert.alt
-                Print/Web Design
+                %label Print/Web Design
           %table.additional{:cellspacing => "0", :cellpadding => "0"}
             %tr
               %td 
                 .expert
-                Detail Oriented
+                %label Detail Oriented
               %td 
                 .expert.alt
-                Fluent Spanish
+                %label Fluent Spanish
     .category
       %span experience
       .clear
