--- a/views/index.haml
+++ b/views/index.haml
@@ -11,57 +11,54 @@
       %img.btn(src="/images/navigation/blog.jpg" alt="blog")/
 
 .portfolio
-  .web
-    .web-logo 
+  .web    
+    .web-logo
       %img(src="/images/portfolio/web/web_logo.png" alt="web")/
-    
-    .small-thumb
+  
+    .small-thumb#wedding_site_opener
       %img(src="/images/portfolio/web/ana_ian.png" alt="ana and ian")/
   
-    .small-thumb
+    .small-thumb#scully_opener
       %img(src="/images/portfolio/web/scully.png" alt="scully and scully")/
   
-    .small-thumb
+    .small-thumb#mally_opener
       %img(src="/images/portfolio/web/mally.png" alt="mally beauty")/
   
-    .small-thumb
+    .small-thumb#kayandy_opener
       %img(src="/images/portfolio/web/kayandy.png" alt="kayleigh and andy")/   
   
-    .small-thumb
+    .small-thumb#kico_opener
       %img(src="/images/portfolio/web/kicokids.png" alt="kico kids")/
   
-    .small-thumb
+    .small-thumb#ajaline_opener
       %img(src="/images/portfolio/web/ajaline.png" alt="ajaline")/
   
-    .small-thumb
+    .small-thumb#satellite_opener
       %img(src="/images/portfolio/web/satellite_records.png" alt="satellite records")/
   
-    .small-thumb
+    .small-thumb#kenneth_cole_opener
       %img(src="/images/portfolio/web/kenneth_cole.png" alt="kenneth cole")/
   
-    .small-thumb
+    .small-thumb#bobbi_brown_opener
       %img(src="/images/portfolio/web/bobbi_brown.png" alt="bobbi brown")/
   
-    .small-thumb
+    .small-thumb#yigal_opener
       %img(src="/images/portfolio/web/yigalazrouel.png" alt="yigal azrouel")/
   
-    .small-thumb
-      %img(src="/images/portfolio/web/scully.png" alt="scully and scully")/
-  
-    .small-thumb
+    .small-thumb#boast_opener
       %img(src="/images/portfolio/web/boast.png" alt="boast")/
     
-    .small-thumb
+    .small-thumb#lanecrawford_opener
       %img(src="/images/portfolio/web/lanecrawford.png" alt="lane crawford")/
   
-    .small-thumb
+    .small-thumb#lanecrawford_teaser_opener
       %img(src="/images/portfolio/web/lanecrawford_teaser.png" alt="lane crawford teaser")/
     
-    .small-thumb
+    .small-thumb#grandsf_opener
       %a(href="#")
         %img(src="/images/portfolio/web/grandsf.png" alt="grand sf")/
   
-    .small-thumb
+    .small-thumb#newlywish_opener
       %a(href="#")
         %img(src="/images/portfolio/web/newlywish.png" alt="newlywish")/
     
@@ -122,31 +119,31 @@
         %img(src="/images/portfolio/web/kimara.png" alt="kimara")/
   
   .print
-    .print-logo 
+    .print-logo
       %img(src="/images/portfolio/print/print_logo.png" alt="print")/
-    
-    .small-thumb
-      %img(src="/images/portfolio/print/bg1.jpg" alt="black and white")/
+  
+    .small-thumb#bwcollage1_opener
+      %img(src="/images/portfolio/print/bw1.jpg" alt="black and white")/
       
     .group-float
-      .small-thumb
-        %img(src="/images/portfolio/print/bg2.jpg" alt="black and white")/
-      .small-thumb
-        %img(src="/images/portfolio/print/bg3.jpg" alt="black and white")/
+      .small-thumb#bwcollage2_opener
+        %img(src="/images/portfolio/print/bw2.jpg" alt="black and white")/
+      .small-thumb#bwcollage3_opener
+        %img(src="/images/portfolio/print/bw3.jpg" alt="black and white")/
         
     .group-float
-      .small-thumb
+      .small-thumb#color_collage2_opener
         %img(src="/images/portfolio/print/color1.jpg" alt="color")/
-      .small-thumb
+      .small-thumb#color_collage3_opener
         %img(src="/images/portfolio/print/color2.jpg" alt="color")/
     
-    .small-thumb
+    .small-thumb#color_collage1_opener
       %img(src="/images/portfolio/print/color3.jpg" alt="color")/
     
   .woodwork
-    .woodwork-logo 
+    .woodwork-logo
       %img(src="/images/portfolio/woodwork/woodwork_logo.png" alt="woodwork")/
-    
+          
     .small-thumb.one
       %img(src="/images/portfolio/woodwork/wood1.jpg" alt="wood")/
     
@@ -160,3 +157,282 @@
       %img(src="/images/portfolio/woodwork/wood4.jpg" alt="wood")/
   
 .clear
+
+/ START LARGE PROJECT DESCRIPTIONS
+    
+#wedding_site     
+  .detail-container
+    .inner-container    
+      %a.close#js-close-modal(href="#")
+      %img(src="/images/portfolio/web/ana_ian.jpg" alt="Ana and Ian")/
+      .project-description
+        %span Ian & Ana's Wedding
+        %p For our wedding, Ian (my husband) and I put together this super simple site, which our guests used to RSVP and pick their meals. Ian worked on the database portion of the site, while I designed and implemented the UI.
+
+#scully     
+  .detail-container
+    .inner-container    
+      %a.close#js-close-modal(href="#")
+      %img(src="/images/portfolio/web/scully.jpg" alt="Scully & Scully")/
+      .project-description
+        %span Scully & Scully
+        %p 
+          Partnered with 
+          %a(href="http://intersectnyc.com" target="_blank")
+            Intersect NYC 
+          to develop the frontend by writing HTML, CSS, and some very basic Ruby and JavaScript(JQuery) to produce web compliant Rails views. 
+          %br/
+          URL:
+          %a(href="http://www.scullyandscully.com" target="_blank")
+            http://www.scullyandscully.com
+   
+#mally     
+  .detail-container
+    .inner-container    
+      %a.close#js-close-modal(href="#")
+      %img(src="/images/portfolio/web/mally.jpg" alt="Mally Beauty")/
+      .project-description
+        %span Mally Beauty
+        %p 
+          Mally Beauty take two, a redesign of the old Mally, which I also worked on (see below). This redesign presents a slicker user interface and focuses heavily on social networking. Partnered with 
+          %a(href="http://intersectnyc.com" target="_blank")
+            Intersect NYC 
+          to develop the frontend by writing HTML, CSS, and some very basic Ruby and JavaScript(JQuery) to produce web compliant Rails views.
+          %br/
+          URL: 
+          %a(href="http://www.mallybeauty.com" target="_blank")
+            http://www.mallybeauty.com
+                              
+#kayandy     
+  .detail-container
+    .inner-container   
+      %a.close#js-close-modal(href="#")
+      %img(src="/images/portfolio/web/kayandy.jpg" alt="Kaleigh and Andy")/
+      .project-description
+        %span Kayleigh & Andy's Wedding
+        %p Normally, both your asses would be dead as fucking fried chicken, but you happen to pull this shit while I'm in a transitional period so I don't wanna kill you, I wanna help you. But I can't give you this case, it don't belong to me. Besides, I've already been through too much shit this morning over this case to hand it over to your dumb ass.
+                        
+#kico     
+  .detail-container
+    .inner-container   
+      %a.close#js-close-modal(href="#")
+      %img(src="/images/portfolio/web/kicokids.jpg" alt="Kico Kids")/
+      .project-description
+        %span Kico Kids
+        %p 
+          %p 
+            Partnered with 
+            %a(href="http://intersectnyc.com" target="_blank")
+              Intersect NYC 
+            to develop the frontend by writing HTML, CSS, and some very basic Ruby and JavaScript(JQuery) to produce web compliant Rails views.
+          %br/
+          URL:
+          %a(href="http://www.kicokids.com" target="_blank")
+            http://www.kicokids.com 
+            
+#ajaline     
+  .detail-container
+    .inner-container   
+      %a.close#js-close-modal(href="#")
+      %img(src="/images/portfolio/web/ajaline.jpg" alt="Ajaline")/
+      .project-description
+        %span Ajaline
+        %p 
+          Partnered with 
+          %a(href="http://intersectnyc.com" target="_blank")
+            Intersect NYC 
+          to develop the frontend by writing HTML, CSS, and some very basic Ruby and JavaScript(JQuery) to produce web compliant Rails views for this exclusive high-end fine jewelry site.
+          
+#satellite     
+  .detail-container
+    .inner-container   
+      %a.close#js-close-modal(href="#")
+      %img(src="/images/portfolio/web/satellite.jpg" alt="Satellite Records")/
+      .project-description
+        %span Satellite Records
+        %p 
+          Satellite Records is a major player in the industry of digital download music with DJ's all around the world as its target audience. I contributed to the the frontend by writing HTML, CSS, to produce web compliant Rails views. 
+          %br/
+          URL:
+          %a(href="http://www.satelliterecords.com" target="_blank")
+            http://www.satelliterecords.com
+            
+#kenneth_cole     
+  .detail-container
+    .inner-container   
+      %a.close#js-close-modal(href="#")
+      %img(src="/images/portfolio/web/kenneth_cole.jpg" alt="Kenneth Cole")/
+      .project-description
+        %span Kenneth Cole
+        %p
+          For this rails application I implemented the user interface by writing web compliant Rails views in HTML, CSS, and some very basic Ruby and JavaScript(JQuery) to create a website, a facebook page, and an interface for mobile devices, namely Webkit and Blackberry. Partnered with 
+          %a(href="http://www.intersectnyc.com" target="_blank")
+            Intersect NYC.
+            
+#bobbi_brown     
+  .detail-container
+    .inner-container   
+      %a.close#js-close-modal(href="#")
+      %img(src="/images/portfolio/web/bobbi_brown.jpg" alt="Bobbi Brown")/
+      .project-description
+        %span Bobbi Brown
+        %p
+          As a temporary administrator for Bobbi Brown's facebook page, I created a custom tab called Beauty Rules and reconfigured third party HTML to work within the Facebook framework. Partnered with 
+          %a(href="http://www.intersectnyc.com" target="_blank")
+            Intersect NYC.
+          %br/
+          URL:
+          %a(href="http://www.facebook.com/BobbiBrown?v=app_6009294086&ref=ts" target="_blank")
+            http://www.facebook.com/BobbiBrown?v=app_6009294086&ref=ts
+            
+#yigal     
+  .detail-container
+    .inner-container   
+      %a.close#js-close-modal(href="#")
+      %img(src="/images/portfolio/web/yigalazrouel.jpg" alt="Yigal Azrouel")/
+      .project-description
+        %span Yigal Azrouel
+        %p 
+          Partnered with 
+          %a(href="http://intersectnyc.com" target="_blank")
+            Intersect NYC 
+          to develop the frontend by writing HTML, CSS, and some very basic Ruby and JavaScript(JQuery) to produce web compliant Rails views.
+          %br/
+          URL:
+          %a(href="http://www.yigal-azrouel.com/" target="_blank")
+            http://www.yigal-azrouel.com
+            
+#boast     
+  .detail-container
+    .inner-container   
+      %a.close#js-close-modal(href="#")
+      %img(src="/images/portfolio/web/boast.jpg" alt="Boast USA")/
+      .project-description
+        %span Yigal Azrouel
+        %p 
+          Took an existing Rails ecommerce framework and re-skinned it to make this site. Other than the designers involved in the making of Boast, little backend support was required, which made the development phase for the most part a rare solo project. Developed the frontend by writing HTML, CSS, and some very basic Ruby and JavaScript(JQuery) to produce web compliant Rails views in partnership with
+          %a(href="http://intersectnyc.com" target="_blank")
+            Intersect NYC.
+          %br/
+          URL:
+          %a(href="http://www.boastusa.com/" target="_blank")
+            http://www.boastusa.com
+            
+#lanecrawford     
+  .detail-container
+    .inner-container   
+      %a.close#js-close-modal(href="#")
+      %img(src="/images/portfolio/web/lanecrawford.jpg" alt="Lane Crawford")/
+      .project-description
+        %span Lane Crawford
+        %p 
+          Lane Crawford Heritage 160 is a micro site that lives under the umbrella site 
+          %a(href="http://www.lanecrawford.com/")
+            http://www.lanecrawford.com.
+          For this site, I wrote HTML, CSS, and incorporated third party XML, SWF and flash files. Partnered with 
+          %a(href="http://intersectnyc.com" target="_blank")
+            Intersect NYC.
+                        
+#lanecrawford_teaser     
+  .detail-container
+    .inner-container   
+      %a.close#js-close-modal(href="#")
+      %img(src="/images/portfolio/web/lanecrawford_teaser.jpg" alt="Lane Crawford")/
+      .project-description
+        %span Lane Crawford Teaser
+        %p 
+          Lane Crawford Teaser was the prelude to Lane Crawford Heritage 160, a micro site that lives under the umbrella site 
+          %a(href="http://www.lanecrawford.com/")
+            http://www.lanecrawford.com.
+          For this site, I wrote the HTML and CSS. Partnered with 
+          %a(href="http://intersectnyc.com" target="_blank")
+            Intersect NYC.
+            
+#grandsf     
+  .detail-container
+    .inner-container   
+      %a.close#js-close-modal(href="#")
+      %img(src="/images/portfolio/web/grandsf.jpg" alt="Grand SF")/
+      .project-description
+        %span Grand SF
+        %p 
+          Fot Grand SF I wrote the HTML5 video player and encoded other formats of videos, such as mp4 and ogg type, to supplement flash video for browsers that are HTML5 compatible. Developed in partnership with
+          %a(href="http://intersectnyc.com" target="_blank")
+            Intersect NYC.
+          %br/
+          URL:
+          %a(href="http://www.agrandsite.com/" target="_blank")
+            http://www.agrandsite.com
+            
+#newlywish     
+  .detail-container
+    .inner-container   
+      %a.close#js-close-modal(href="#")
+      %img(src="/images/portfolio/web/newlywish.jpg" alt="Newlywish")/
+      .project-description
+        %span Grand SF
+        %p 
+          "NewlyWish is a wedding gift registry service designed to provide to-be-weds, their friends and family, with the choice, convenience, and personalization they desire." This project involved many developers. My role included writing some of the frontend using HTML, CSS, and some very basic JavaScript(JQuery). Developed in partnership with
+          %a(href="http://intersectnyc.com" target="_blank")
+            Intersect NYC.
+          %br/
+          URL:
+          %a(href="http://www.newlywish.com/" target="_blank")
+            http://www.newlywish.com
+
+#bwcollage1     
+  .detail-container
+    .inner-container    
+      %a.close#js-close-modal(href="#")
+      %img(src="/images/portfolio/print/bwcollage1.jpg" alt="bwcollage")/
+      .project-description
+        %span Black & White Collage 1
+        %p Well, the way they make shows is, they make one show. That show's called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they're going to make more shows. Some pilots get picked and become television programs. Some don't, become nothing. She starred in one of the ones that became nothing.
+  
+#bwcollage2    
+  .detail-container
+    .inner-container    
+      %a.close#js-close-modal(href="#")
+      %img(src="/images/portfolio/print/bwcollage3.jpg" alt="bwcollage")/
+      .project-description
+        %span Black & White Collage 2
+        %p Well, the way they make shows is, they make one show. That show's called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they're going to make more shows. Some pilots get picked and become television programs. Some don't, become nothing. She starred in one of the ones that became nothing.
+  
+        
+#bwcollage3     
+  .detail-container
+    .inner-container    
+      %a.close#js-close-modal(href="#")
+      %img(src="/images/portfolio/print/bwcollage2.jpg" alt="bwcollage")/
+      .project-description
+        %span Black & White Collage 3
+        %p Well, the way they make shows is, they make one show. That show's called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they're going to make more shows. Some pilots get picked and become television programs. Some don't, become nothing. She starred in one of the ones that became nothing.
+              
+#color_collage1     
+  .detail-container
+    .inner-container    
+      %a.close#js-close-modal(href="#")
+      %img(src="/images/portfolio/print/colorCollage1.jpg" alt="color collage")/
+      .project-description
+        %span Color Collage 1
+        %p Well, the way they make shows is, they make one show. That show's called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they're going to make more shows. Some pilots get picked and become television programs. Some don't, become nothing. She starred in one of the ones that became nothing. 
+        
+#color_collage2     
+  .detail-container
+    .inner-container    
+      %a.close#js-close-modal(href="#")
+      %img(src="/images/portfolio/print/colorCollage2.jpg" alt="color collage")/
+      .project-description
+        %span Color Collage 2
+        %p Well, the way they make shows is, they make one show. That show's called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they're going to make more shows. Some pilots get picked and become television programs. Some don't, become nothing. She starred in one of the ones that became nothing.
+                
+#color_collage3     
+  .detail-container
+    .inner-container    
+      %a.close#js-close-modal(href="#")
+      %img(src="/images/portfolio/print/colorCollage3.jpg" alt="color collage")/
+      .project-description
+        %span Color Collage 3
+        %p Well, the way they make shows is, they make one show. That show's called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they're going to make more shows. Some pilots get picked and become television programs. Some don't, become nothing. She starred in one of the ones that became nothing.
+            
+/ END LARGE PROJECT DESCRIPTIONS
